# yeoldedink

./: CHANGELOG.md  README.md  meson.build  woeres.rc  xmake.lua
cross/: emscripten-standalone.txt  emscripten.txt  switch.txt
emscripten/: compress_ancillary.sh  compress_freedinkdata.sh  index.html  pre.js  prestandalone.js  shell.html  shell_minimal.html
include/: config.h.in  glob.hpp  gnulib.h  imconfig.h
include/color/: color.hpp
include/color/LabCH/convert/: tsl.hpp
include/color/LuvCH/convert/: tsl.hpp
include/color/YCgCo/convert/: tsl.hpp
include/color/YDbDr/convert/: tsl.hpp
include/color/YPbPr/convert/: tsl.hpp
include/color/cmy/convert/: tsl.hpp
include/color/cmyk/convert/: tsl.hpp
include/color/generic/akin/: tsl.hpp
include/color/generic/compare/: different.hpp  equal.hpp  great_or_equal.hpp  less_or_equal.hpp
include/color/generic/operation/: blend.hpp
include/color/generic/operation/distance/: constant.hpp  maxwell.hpp  usher.hpp
include/color/generic/place/: tint.hpp
include/color/generic/trait/: scalar.hpp
include/color/gray/convert/: tsl.hpp
include/color/hsi/convert/: tsl.hpp
include/color/hsl/convert/: tsl.hpp
include/color/hsv/convert/: tsl.hpp
include/color/hwb/convert/: tsl.hpp
include/color/hwb/fix/: integrity.hpp
include/color/lab/convert/: tsl.hpp
include/color/lab/get/: saturation.hpp
include/color/lms/constant/: matrix.hpp  reference.hpp
include/color/lms/convert/: tsl.hpp
include/color/luv/convert/: tsl.hpp
include/color/rgb/akin/: tsl.hpp
include/color/rgb/convert/: tsl.hpp
include/color/rgb/get/: black.hpp  chroma.hpp  cyan.hpp  hue.hpp  magenta.hpp  saturation.hpp  white.hpp  yellow.hpp
include/color/tsl/: constant.hpp
include/color/tsl/akin/: LabCH.hpp  LuvCH.hpp  YCgCo.hpp  YDbDr.hpp  YPbPr.hpp  cmy.hpp  cmyk.hpp  gray.hpp  hsi.hpp  hsl.hpp  hsv.hpp  hwb.hpp  lab.hpp  lms.hpp  luv.hpp  rgb.hpp  tsl.hpp  xyy.hpp  xyz.hpp  yiq.hpp  yuv.hpp
include/color/tsl/convert/: LabCH.hpp  LuvCH.hpp  YCgCo.hpp  YDbDr.hpp  YPbPr.hpp  cmy.hpp  cmyk.hpp  gray.hpp  hsi.hpp  hsl.hpp  hsv.hpp  hwb.hpp  lab.hpp  lms.hpp  luv.hpp  rgb.hpp  tsl.hpp  xyy.hpp  xyz.hpp  yiq.hpp  yuv.hpp
include/color/tsl/get/: get.hpp  lightness.hpp  saturaton.hpp  tint.hpp
include/color/tsl/place/: lightness.hpp  place.hpp  saturation.hpp  tint.hpp
include/color/tsl/trait/: info.hpp
include/color/tsl/trait/bound/: uint.hpp
include/color/tsl/trait/component/: uint.hpp
include/color/tsl/trait/container/: uint.hpp
include/color/xyy/convert/: tsl.hpp
include/color/xyz/constant/: transformation.hpp
include/color/xyz/convert/: tsl.hpp
include/color/xyz/get/: get.hpp  temperature.hpp
include/color/yiq/convert/: tsl.hpp
include/color/yuv/convert/: tsl.hpp
include/sol/: config.hpp  forward.hpp  sol.hpp
share/: Info.plist  macbundle.sh  yedink gold.icns  yedink gold.tif  yedink.icns
share/yeoldedink/: color.frag  common.frag  common.vert  init.lua  settings.dink  yedink.ini
soloud/: soloud.h  soloud_fftfilter.cpp  soloud_midi.cpp
soloud/.deps/: soloud_sdl2.Po  soloud_sdl2_dll.Po
src/: AppFreeDink.cpp  BgTilesetsManager.cpp  DMod.cpp  DMod.h  EditorMap.cpp  EditorMap.h  IOGfxDisplay.cpp  IOGfxDisplay.h  IOGfxDisplayGL2.cpp  IOGfxDisplayGL2.h  IOGfxDisplaySW.cpp  IOGfxPrimitivesSW.cpp  IOGfxSurface.cpp  IOGfxSurfaceGL2.cpp  IOGfxSurfaceGL2.h  IOGfxSurfaceSW.cpp  IOTouchDragAnywhere.cpp  ImageLoader.cpp  SDL_android_main.c  app.cpp  app.h  bgm.cpp  bgm.h  brain.cpp  brain.h  brain_bounce.cpp  brain_button.cpp  brain_circular.cpp  brain_diagonal.cpp  brain_duck.cpp  brain_keyboard.cpp  brain_lateral.cpp  brain_missile.cpp  brain_mouse.cpp  brain_none.cpp  brain_onetime.cpp  brain_people.cpp  brain_pig.cpp  brain_pingpong.cpp  brain_repeat.cpp  (+77 more)
src_misc/: test_android_workaround.h  test_gfx_fonts_libe.h
test/: TestEditorMap.cxx  TestIOGfxDisplay.cxx  TestIOTouchDragAnywhere.cxx  test_brain_text.cxx  test_dinkc.cxx  test_dinkc_bindings.cxx  test_dinkc_console.cxx  test_dinkini.cxx  test_editor_screen.cxx  test_gfx_fonts.cxx  test_integration.cxx  test_io_util.cxx  test_live_sprites_manager.cxx  test_str_util.cxx  test_text.cxx
